# ed2k-engine-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.zh-CN.md  vcpkg.json
.github/workflows/: build.yml  live-server-probe.yml
apps/cli/: main.cpp
cmake/: ed2k.pc.in  ed2kConfig.cmake.in
docs/: API.md  API.zh-CN.md  RELEASE-PLAN.md  USAGE.md  USAGE.zh-CN.md
include/ed2k/: ed2k.hpp  hash.hpp  link.hpp  version.hpp  version.hpp.in
include/ed2k/app/: server_session.hpp
include/ed2k/codec/: byte_io.hpp  tag.hpp
include/ed2k/core/: hash.hpp
include/ed2k/crypto/: md5.hpp  rc4.hpp  sha1.hpp
include/ed2k/download/: aich_checker.hpp  block_allocator.hpp  download.hpp  part_file.hpp
include/ed2k/hash/: aich_hasher.hpp  ed2k_hasher.hpp
include/ed2k/infra/: category.hpp  chat_relay.hpp  client_list.hpp  collection.hpp  friend_list.hpp  http_download.hpp  ip_filter.hpp  preferences.hpp  proxy.hpp  scheduler.hpp  statistics.hpp
include/ed2k/kad/: indexed.hpp  kad_id.hpp  keywords.hpp  messages.hpp  network.hpp  nodes_dat.hpp  routing_table.hpp  udp_crypto.hpp
include/ed2k/link/: ed2k_link.hpp
include/ed2k/metfile/: known_part_met.hpp  server_met.hpp
include/ed2k/net/: connection.hpp  encrypted_stream_socket.hpp  framing.hpp  packet.hpp  runtime.hpp  udp_framing.hpp  udp_obfuscation.hpp  udp_socket.hpp
include/ed2k/peer/: c2c_connection.hpp  c2c_messages.hpp  c2c_opcodes.hpp  inbound_listener.hpp  peer_reask.hpp
include/ed2k/server/: connection.hpp  messages.hpp  opcodes.hpp  search_query.hpp  udp_connection.hpp  udp_messages.hpp  udp_opcodes.hpp
include/ed2k/session/: session.hpp
include/ed2k/share/: client_credits.hpp  known_file.hpp  upload_queue.hpp  upload_session.hpp  upload_throttler.hpp
include/ed2k/util/: error.hpp  log.hpp
scripts/live/: amule-obfuscation.conf.in  run-amule-obfuscation.ps1  run-amule-obfuscation.tests.ps1  select-public-server.ps1  select-public-server.tests.ps1  setup-amule-obfuscation.ps1
src/app/: server_session.cpp
src/codec/: byte_io.cpp  tag.cpp
src/core/: hash.cpp
src/crypto/: md4.cpp  md4.hpp  md5.cpp  rc4.cpp  sha1.cpp  sha1.hpp
src/download/: aich_checker.cpp  block_allocator.cpp  download.cpp  part_file.cpp
src/hash/: aich_hasher.cpp  ed2k_hasher.cpp
src/infra/: category.cpp  chat_relay.cpp  client_list.cpp  collection.cpp  friend_list.cpp  http_download.cpp  http_download_internal.hpp  ip_filter.cpp  preferences.cpp  proxy.cpp  scheduler.cpp  statistics.cpp  tls_trust_store.cpp  tls_trust_store.hpp
src/kad/: indexed.cpp  kad_id.cpp  keywords.cpp  messages.cpp  network.cpp  nodes_dat.cpp  routing_table.cpp  udp_crypto.cpp
src/link/: ed2k_link.cpp
src/metfile/: known_part_met.cpp  server_met.cpp
src/net/: connection.cpp  encrypted_stream_socket.cpp  framing.cpp  inflate.cpp  inflate.hpp  runtime.cpp  udp_framing.cpp  udp_obfuscation.cpp  udp_socket.cpp
src/peer/: c2c_connection.cpp  c2c_messages.cpp  inbound_listener.cpp  peer_reask.cpp
src/server/: connection.cpp  messages.cpp  search_query.cpp  udp_connection.cpp  udp_messages.cpp
src/session/: session.cpp
src/share/: client_credits.cpp  known_file.cpp  upload_queue.cpp  upload_session.cpp  upload_throttler.cpp
src/util/: error.cpp  log.cpp  version.cpp
tests/: aich_checker_test.cpp  aich_hasher_test.cpp  api_pimpl_test.cpp  app_download_test.cpp  app_session_test.cpp  block_allocator_test.cpp  byte_io_test.cpp  c2c_connection_test.cpp  c2c_messages_test.cpp  category_test.cpp  cli_smoke_test.cpp  client_credits_test.cpp  collection_test.cpp  connection_test.cpp  core_hash_test.cpp  download_progress_test.cpp  download_test.cpp  ed2k_hasher_test.cpp  ed2k_link_test.cpp  encrypted_stream_socket_test.cpp  error_test.cpp  framing_test.cpp  friend_client_list_test.cpp  http_download_test.cpp  inbound_listener_test.cpp  ip_filter_test.cpp  kad_id_test.cpp  kad_indexed_test.cpp  kad_keywords_test.cpp  kad_messages_test.cpp  kad_network_test.cpp  kad_nodes_dat_test.cpp  kad_routing_test.cpp  kad_udp_crypto_test.cpp  known_part_met_test.cpp  live_download_test.cpp  live_env.hpp  live_kad_test.cpp  live_obfuscation_test.cpp  live_server_test.cpp  (+38 more)
tests/consumer/: CMakeLists.txt  main.cpp
tests/fixtures/tls/: ca.crt  server.crt  server.key
